# Business-Quote-Generator

./: .env.example  .gitignore  LICENSE  Procfile  README.md  business_quote_generator_docs.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
Schema/: README.md  activity-event.schema.json  catalog-item.schema.json  client.schema.json  company-profile.schema.json  database.schema.sql  quote-counter.schema.json  quote-line-item.schema.json  quote.schema.json  relationship-summary.md  state-machine.md
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: adr-0001-decimal-money.md  adr-0002-server-side-totals.md  adr-0003-content-negotiation.md  adr-0004-reportlab-pdf.md  adr-0005-usd-only-currency.md  adr-0006-public-bearer-token.md  htmx-patterns.md  roadmap.md  schema.md
quotes/: admin.py  apps.py  forms.py  models.py  pdf.py  tests.py  urls.py  views.py
quotes/fixtures/: seed.json
quotes/migrations/: 0001_initial.py  0002_alter_catalogitem_default_unit_price_and_more.py  0003_alter_quotelineitem_quantity_and_more.py  0004_default_validity_days_min_one.py
quotes/static/css/: app.css
quotes/templatetags/: quote_extras.py
quotes/tests/: conftest.py  test_admin.py  test_forms.py  test_integration.py  test_models.py  test_pdf.py  test_templatetags.py  test_view_helpers.py  test_views_extra.py
templates/: _README.md
templates/registration/: login.html  password_reset_complete.html  password_reset_done.html  password_reset_form.html  signup.html
(+51 files in other folders)
