[project]
name = "business-quote-generator"
version = "0.1.0"
description = "Django quote workflow app for small service businesses"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "-ra", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["quotes"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
